--- a/Simulate Facetime/Views/Base.lproj/LaunchScreen.storyboard
+++ b/Simulate Facetime/Views/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,19 +16,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="video" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="j8y-Y5-WHb">
-                                <rect key="frame" x="107" y="348" width="200" height="200"/>
-                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="j8y-Y5-WHb">
+                                <rect key="frame" x="20" y="348" width="374" height="200"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="Iko-lG-YFm"/>
-                                    <constraint firstAttribute="width" constant="200" id="dV0-Eb-gec"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="j8y-Y5-WHb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="3pW-xH-r6n"/>
+                            <constraint firstItem="j8y-Y5-WHb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" id="SXo-Rx-lzw"/>
+                            <constraint firstAttribute="trailing" secondItem="j8y-Y5-WHb" secondAttribute="trailing" constant="20" id="eVZ-5x-Ido"/>
                             <constraint firstItem="j8y-Y5-WHb" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="uxN-gE-3rp"/>
                         </constraints>
                     </view>
@@ -40,9 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="video" catalog="system" width="128" height="83"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="icon" width="256" height="256"/>
     </resources>
 </document>
